<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UserEdit" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

       	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/tvCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/tvCadastro"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />
            
            <TextView
		        android:id="@+id/tvEmail"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvEmail"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintEmail"
                android:inputType="text|textEmailAddress"
                android:textSize="20sp" >
            </EditText>

            <TextView
		        android:id="@+id/tvSenha"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvSenha"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:textSize="20sp" />
            
            <TextView
		        android:id="@+id/tvConfSenha"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvConfSenha"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etConfSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintConfSenha"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <TextView
		        android:id="@+id/tvNome"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvNome"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintNome"
                android:inputType="textCapWords|textPersonName"
                android:textSize="20sp" />

            <TextView
		        android:id="@+id/tvDataNasc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/tvDataNasc"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/etNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintDataNasc"
                android:inputType="none"
                android:textSize="20sp" />
            
            <Button
                android:id="@+id/btSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/btSalvar"
                android:textSize="28sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>