<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".TelaCadastroUsuario"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/tvCadastro"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintEmail"
                android:inputType="text|textEmailAddress"
                android:textSize="20sp" >
            </EditText>

            <EditText
                android:id="@+id/etSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etConfSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintConfSenha"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintNome"
                android:inputType="textCapWords|textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintDataNasc"
                android:inputType="date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintAltura"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintPeso"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/btContinuar"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>