<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="15dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chLembretePeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/chLembretePeso" />

            <EditText
                android:id="@+id/horaLembretePeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="time"
                android:textSize="20sp"
                android:hint="@string/hintHoraLembrete" />

            <CheckBox
                android:id="@+id/chLembreteBPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="@string/chLembreteBPM" />

            <EditText
                android:id="@+id/horaLembreteBPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="time"
                android:textSize="20sp"
                android:hint="@string/hintHoraLembrete" />

            <Button
		        android:id="@+id/btSalvar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="25dp"
		        android:text="@string/btSalvar"
		        android:textSize="24sp" />
		
		    <Button
		        android:id="@+id/btLogout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="30dp"
		        android:text="@string/btLogout"
		        android:textSize="24sp" />
            
        </LinearLayout>	    
	
	</ScrollView>

</LinearLayout>