<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TelaEdicaoUsuario" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

       	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="15dp" >

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintEmail"
                android:inputType="text|textEmailAddress"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editConfSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintConfSenha"
                android:inputType="textPassword"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintNome"
                android:inputType="textCapWords|textPersonName"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintDataNasc"
                android:inputType="date"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintAltura"
                android:inputType="numberDecimal"
                android:textSize="22sp" />
            
            <EditText
                android:id="@+id/editAlvoBPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintAlvoBPM"
                android:inputType="number"
                android:textSize="22sp" />

            <Button
                android:id="@+id/atualizaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/buttonSalvar"
                android:textSize="28sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>