<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="15dp"
            android:orientation="vertical" >
            
		    <Spinner
		        android:id="@+id/spTipo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/spTipo" />
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp" >
		
		        <EditText
		            android:id="@+id/etMedicao"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1.24"
		            android:textSize="22sp"
		            android:inputType="numberDecimal" >
		        </EditText>
		
		        <TextView
		            android:id="@+id/tvUnidade"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:padding="10dp"
		            android:text="@string/tvUnidade"
		            android:textSize="22sp" />
		
		    </LinearLayout>
		    
		    <Button
		        android:id="@+id/btSalvar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="32dp"
		        android:text="@string/btSalvar"
		        android:textSize="26sp" />
		    
		    <Button
		        android:id="@+id/btExcluir"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="32dp"
		        android:text="@string/btExcluir"
		        android:textSize="26sp" />

		</LinearLayout>	    
	
	</ScrollView>

</LinearLayout>