<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/tvTipoIndicador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvTipoIndicador"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="20sp"
                android:prompt="@string/spTipo" />

            <TextView
                android:id="@+id/tvMedida1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tvMedida1"
                android:textSize="20sp" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
                
                <EditText
                    android:id="@+id/etMedida1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.24"
                    android:inputType="numberDecimal"
                    android:textSize="22sp" >
                </EditText>
                
                <TextView
                    android:id="@+id/tvUnidade1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tvUnidade"
                    android:textSize="20sp" />
                
            </LinearLayout>
                    
            <TextView
                android:id="@+id/tvMedida2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tvMedida2"
                android:textSize="20sp" />
        
           	<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
                
                <EditText
                    android:id="@+id/etMedida2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.24"
                    android:inputType="numberDecimal"
                    android:textSize="22sp" >
                </EditText>

                <TextView
                    android:id="@+id/tvUnidade2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tvUnidade"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/btSalvar"
                android:textSize="26sp" />
        </LinearLayout>
	    
	</ScrollView>


</LinearLayout>